src/objects/ProjectAttachments__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentType__c</fullName>
        <label>AttachmentType</label>
        <picklist>
            <picklistValues>
                <fullName>Brochure</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmailContent__c</fullName>
        <description>The content is send in the body of the mail while sending the brochure / collateral to a client</description>
        <label>Email Content</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Latest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>ProjectAttachments</relationshipLabel>
        <relationshipName>ProjectAttachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <defaultValue>&quot;Project Brochure&quot;</defaultValue>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ProjectAttachment</label>
    <nameField>
        <label>ProjectAttachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjectAttachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>